<resources>
    <string name="app_name">ToDo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="new_task_title">New task</string>
    <string name="new_task_input_hint">New task content</string>
    <string name="new_task_save_button">Save</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_task_title">Are you sure?</string>
    <string name="delete_task_message">Task will be deleted forever. You can\'t bring it back</string>
    <string name="edit">Edit</string>

    <string name="edit_task_input_hint">Edit task content</string>
    <string name="new_task_is_high_priority">High priority</string>
    <string name="priority_low">Low priority</string>
    <string name="priority_medium">Medium priority</string>
    <string name="priority_high">High priority</string>
    <string name="priority_very_high">Very high priority</string>
    <string name="view_task_title">Task detail</string>
</resources>
